# plutus-quant

./: .env.template  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: MARKET_FACTS.md  architecture.md  biotech_catalyst_study.md  copycat_13f_study.md  data_sources.md  first_study.md  gap_lottery_study.md  ibes_pead_study.md  index_effect_study.md  issuance_study.md  longshort_study.md  ml_zoo_study.md  multifactor_study.md  overnight_study.md  pairs_study.md  paper_trading.md  pead_event_study.md  pead_study.md  reversal_study.md  smallcap_pead_study.md  smallcap_study.md  sp1_study.md  survivorship_study.md  topgainer_study.md  vol_overlay_study.md
scripts/: build_13f_lake.py  build_13f_prices.py  build_crsp_biotech_lake.py  build_crsp_cusip_map.py  build_crsp_lake.py  build_crsp_open_lake.py  build_crsp_sic_map.py  build_crsp_smallcap_lake.py  build_fundamentals.py  build_price_lake.py  crsp_13f_copycat_study.py  crsp_biotech_catalyst_study.py  crsp_dl.py  crsp_dl_capacity.py  crsp_dl_oos.py  crsp_dl_optimize.py  crsp_dl_optimize_robust.py  crsp_dl_tradability.py  crsp_factor_study.py  crsp_gap_lottery_study.py  crsp_gru_capacity_study.py  crsp_gru_oos_study.py  crsp_gru_optimize_robust_study.py  crsp_gru_optimize_study.py  crsp_gru_pipeline.py  crsp_gru_tradability_study.py  crsp_ibes_pead.py  crsp_ibes_pead_study.py  crsp_index_effect_study.py  crsp_issuance_study.py  crsp_longshort_study.py  crsp_ml_zoo.py  crsp_ml_zoo_study.py  crsp_multifactor_study.py  crsp_oos_diagnostics.py  crsp_oos_diagnostics_study.py  crsp_oos_inference.py  crsp_oos_inference_study.py  crsp_overnight_study.py  crsp_pairs_study.py  (+22 more)
scripts/probes/: smoke_pipeline.py  smoke_yfinance.py
src/plutus/: __init__.py  config.py  io.py  paths.py
src/plutus/data/: __init__.py  universe.py
src/plutus/data/sources/: __init__.py  crsp_source.py  form13f.py  ibes_source.py  sec_edgar.py  stooq_source.py  yfinance_source.py
src/plutus/execution/: __init__.py
src/plutus/live/: __init__.py  feed.py  forward.py  ledger.py  paper.py  strategy.py
src/plutus/research/: __init__.py
src/plutus/research/backtest/: __init__.py  copycat.py  event_study.py  frictions.py  gap_events.py  long_short.py  metrics.py  optimize.py  pairs.py  portfolio.py  regime.py  sizing.py
src/plutus/research/eval/: __init__.py  calibration.py  factor_eval.py
src/plutus/research/factors/: __init__.py  alpha_features.py  events.py  library.py
src/plutus/research/model/: __init__.py  walk_forward.py
tests/: test_alpha_features.py  test_calibration.py  test_copycat.py  test_crsp.py  test_event_study.py  test_events.py  test_factor_eval.py  test_factors.py  test_frictions.py  test_gap_events.py  test_ibes.py  test_ledger.py  test_long_short.py  test_metrics.py  test_optimize.py  test_pairs.py  test_paper.py  test_portfolio.py  test_regime.py  test_sec_edgar.py  test_sic_tagging.py  test_sizing.py  test_stooq.py  test_universe.py  test_walk_forward.py  test_yfinance_source.py
