[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plutus-quant"
description = "US-equity quantitative research, backtest and paper-trading system (codename Plutus)."
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Rhymer-Lcy" }]
dynamic = ["version"]
classifiers = [
    "Private :: Do Not Upload",  # hard-blocks accidental PyPI publish
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "pandas<3",
    "scipy",
    "scikit-learn",
    "lightgbm",
    "pyarrow",
    "matplotlib",
    "requests",      # SEC EDGAR + Stooq CSV
    "yfinance",      # free daily price backbone
    "openpyxl",      # read CRSP S&P 500 constituents .xlsx (data/sources/crsp_source)
    "cvxpy",         # turnover-aware portfolio optimization (research/backtest/optimize)
    "statsmodels",   # Engle-Granger cointegration ADF test (research/backtest/pairs)
]
# NOTE: deep-learning scripts (scripts/crsp_dl*.py) also need `torch` (install the CUDA build
# separately, e.g. pip install torch --index-url https://download.pytorch.org/whl/cu128); it is
# a script-only dependency, not imported by the importable package, so it's kept out of core deps.

[project.optional-dependencies]
dev = ["pytest", "ruff"]
notebooks = ["jupyterlab"]
# Paper/live trading via Alpaca (kept optional so research installs stay lean).
broker = ["alpaca-py"]
# zipline-reloaded is installed editable from ./external as an INDEPENDENT friction
# cross-check (the RQAlpha analog), kept out of `dependencies` so it never gates research.

[project.urls]
Repository = "https://github.com/Rhymer-Lcy/plutus-quant"

[tool.setuptools.dynamic]
version = { attr = "plutus.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["plutus*"]

[tool.setuptools.package-data]
plutus = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
